force-app/main/default/objects/ucinn_ascendv2__Record_Type_Threshold__c/ucinn_ascendv2__Record_Type_Threshold__c.object-meta.xml
<CustomObject>
    <description>Threshold for each record type.</description>
    <label>Record Type Threshold</label>
    <nameField>
        <label>Record Type Threshold Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Type Thresholds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>