force-app/main/default/objects/ucinn_ascendv2__Record_Type_Threshold__c/fields/ucinn_ascendv2__Matching_Rule__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Rule__c</fullName>
    <description>The matching rule this record type threshold belongs to</description>
    <label>Matching Rule</label>
    <referenceTo>ucinn_ascendv2__Matching_Rule__c</referenceTo>
    <relationshipLabel>Record Type Thresholds</relationshipLabel>
    <relationshipName>Record_Type_Thresholds_Matching_Rule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>