force-app/main/default/objects/ucinn_ascendv2__Record_Type_Threshold__c/fields/ucinn_ascendv2__Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Record_Type_ID__c</fullName>
    <description>The record type Id for the specific record type</description>
    <label>Record Type ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>