force-app/main/default/objects/ucinn_ascendv2__Record_Type_Threshold__c/fields/ucinn_ascendv2__Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Record_Type_Name__c</fullName>
    <description>The name for the specific record type</description>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>