force-app/main/default/objects/ucinn_ascendv2__Record_Type_Threshold__c/fields/ucinn_ascendv2__Record_Type_Threshold_Value__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Record_Type_Threshold_Value__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The threshold value for the specific record type</description>
    <label>Record Type Threshold Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>